table creation edits

--- a/Code/Modelling/Logistic Regression/Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/Logistic Regression/Table Creation/Create Tables.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
     "        'Weighted Average Precision': [weighted_avg_precision],\n",
     "        'Weighted Average Recall': [weighted_avg_recall],\n",
     "        'F1 Score': [f1],\n",
-    "        'Share Less Than 1 Rating From Actual': [close_predictions_share]\n",
+    "        'Share 1 Rating Or Less From Actual': [close_predictions_share]\n",
     "    })\n",
     "\n",
     "    # Return row\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "      <th>Weighted Average Precision</th>\n",
        "      <th>Weighted Average Recall</th>\n",
        "      <th>F1 Score</th>\n",
-       "      <th>Share Less Than 1 Rating From Actual</th>\n",
+       "      <th>Share 1 Rating Or Less From Actual</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -196,22 +196,22 @@
        "</div>"
       ],
       "text/plain": [
-       "      Model/Baseline  Accuracy Weighted Average Precision  \\\n",
-       "0     Rating Model 1      0.36                       0.30   \n",
-       "0     Rating Model 2      0.51                       0.49   \n",
-       "0     Rating Model 3      0.95                       0.95   \n",
-       "0     Rating Model 4      0.95                       0.95   \n",
-       "0  Majority Baseline      0.32                              \n",
+       "      Model/Baseline Accuracy Weighted Average Precision  \\\n",
+       "0     Rating Model 1     0.36                       0.30   \n",
+       "0     Rating Model 2     0.51                       0.49   \n",
+       "0     Rating Model 3     0.95                       0.95   \n",
+       "0     Rating Model 4     0.95                       0.95   \n",
+       "0  Majority Baseline     0.32                              \n",
        "\n",
-       "  Weighted Average Recall F1 Score Share Less Than 1 Rating From Actual  \n",
-       "0                    0.36     0.26                                 0.82  \n",
-       "0                    0.51     0.46                                 0.89  \n",
-       "0                    0.95     0.95                                 0.99  \n",
-       "0                    0.95     0.95                                 0.99  \n",
-       "0                                                                        "
+       "  Weighted Average Recall F1 Score Share 1 Rating Or Less From Actual  \n",
+       "0                    0.36     0.26                               0.82  \n",
+       "0                    0.51     0.46                               0.89  \n",
+       "0                    0.95     0.95                               0.99  \n",
+       "0                    0.95     0.95                               0.99  \n",
+       "0                                                                      "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
     "    'Weighted Average Precision': [''],\n",
     "    'Weighted Average Recall': [''],\n",
     "    'F1 Score': [''],\n",
-    "    'Share Less Than 1 Rating From Actual': ['']\n",
+    "    'Share 1 Rating Or Less From Actual': ['']\n",
     "})])\n",
     "\n",
     "# Export to Excel\n",
@@ -247,6 +247,9 @@
     "#model_comparison_df.to_latex('../../../../Output/Modelling/Logistic Regression/Tables/model_comparison_df.tex', index = False)\n",
     "\n",
     "# Export to LaTeX\n",
+    "# Format columns\n",
+    "for col in model_comparison_df.columns:\n",
+    "    model_comparison_df[col] = model_comparison_df[col].apply(lambda x: f'{x:.2f}' if isinstance(x, float) else x)\n",
     "# Center all columns\n",
     "lt_string = model_comparison_df.to_latex(index=False, column_format='c' * len(model_comparison_df.columns), escape=False)\n",
     "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
@@ -265,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -327,6 +330,9 @@
     "#classification_report_data.to_latex('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Classification_Report.tex', index=False)\n",
     "\n",
     "# Export to LaTeX\n",
+    "# Format columns\n",
+    "for col in classification_report_data.columns:\n",
+    "    classification_report_data[col] = classification_report_data[col].apply(lambda x: f'{x:.2f}' if isinstance(x, float) else x)\n",
     "# Center all columns\n",
     "lt_string = classification_report_data.to_latex(index=False, column_format='c' * 5, escape=False)\n",
     "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
@@ -343,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -385,6 +391,8 @@
     "#best_params.to_latex('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Best_Params.tex', index=False)\n",
     "\n",
     "# Export to LaTeX\n",
+    "for col in ['C', 'L1 Ratio']:\n",
+    "    best_params[col] = best_params[col].apply(lambda x: '{:,.2f}'.format(x))\n",
     "# Center all columns\n",
     "lt_string = best_params.to_latex(index=False, column_format='c' * len(best_params.columns), escape=False)\n",
     "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
@@ -401,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -412,8 +420,8 @@
       "  Model/Baseline  Accuracy Weighted Average Precision Weighted Average Recall  \\\n",
       "0   Change Model      0.96                       0.91                    0.96   \n",
       "\n",
-      "   F1 Score  Share Less Than 1 Rating From Actual  \n",
-      "0      0.93                                   1.0  \n",
+      "   F1 Score  Share 1 Rating Or Less From Actual  \n",
+      "0      0.93                                 1.0  \n",
       "0.96\n"
      ]
     },
@@ -459,14 +467,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   Accuracy Weighted Average Precision Weighted Average Recall  F1 Score  \\\n",
-       "0      0.96                       0.91                    0.96      0.93   \n",
+       "  Accuracy Weighted Average Precision Weighted Average Recall F1 Score  \\\n",
+       "0     0.96                       0.91                    0.96     0.93   \n",
        "\n",
-       "   Majority Baseline  \n",
-       "0               0.96  "
+       "  Majority Baseline  \n",
+       "0              0.96  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +486,7 @@
     "print(maj_baseline)\n",
     "\n",
     "# Drop Model/Baseline, Share Less Than 1 Rating From Actual\n",
-    "changes_table = starter_row.drop(columns=['Model/Baseline', 'Share Less Than 1 Rating From Actual'])\n",
+    "changes_table = starter_row.drop(columns=['Model/Baseline', 'Share 1 Rating Or Less From Actual'])\n",
     "# Add column for maj_baseline\n",
     "changes_table['Majority Baseline'] = maj_baseline\n",
     "\n",
@@ -489,8 +497,10 @@
     "#changes_table.to_latex('../../../../Output/Modelling/Logistic Regression/Tables/changes_table.tex', index=False)\n",
     "\n",
     "# Export to LaTeX\n",
+    "for col in ['Accuracy', 'F1 Score', 'Majority Baseline']:\n",
+    "    changes_table[col] = changes_table[col].apply(lambda x: '{:,.2f}'.format(x))\n",
     "# Center all columns\n",
-    "lt_string = changes_table.to_latex(index=False, column_format='c' * len(changes_table.columns), escape=False)\n",
+    "lt_string = changes_table.to_latex(index=False, column_format='c{5cm}|c{5cm}|c{5cm}|c{5cm}|c{5cm}', escape=False)\n",
     "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
     "with open('../../../../Output/Modelling/Logistic Regression/Tables/changes_table.tex', 'w') as f:\n",
     "    f.write(latex_with_font_size)\n",
