--- a/Output/Modelling/Logistic Regression/Tables/changes_table.tex
+++ b/Output/Modelling/Logistic Regression/Tables/changes_table.tex
@@ -1,9 +1,9 @@
 \small
-\begin{tabular}{ccccc}
+\begin{tabular}{c{5cm}|c{5cm}|c{5cm}|c{5cm}|c{5cm}}
 \toprule
 Accuracy & Weighted Average Precision & Weighted Average Recall & F1 Score & Majority Baseline \\
 \midrule
-0.960000 & 0.91 & 0.96 & 0.930000 & 0.960000 \\
+0.96 & 0.91 & 0.96 & 0.93 & 0.96 \\
 \bottomrule
 \end{tabular}
 
