--- a/Output/Modelling/Logistic Regression/Tables/model_comparison_df.tex
+++ b/Output/Modelling/Logistic Regression/Tables/model_comparison_df.tex
@@ -1,13 +1,13 @@
 \small
 \begin{tabular}{cccccc}
 \toprule
-Model/Baseline & Accuracy & Weighted Average Precision & Weighted Average Recall & F1 Score & Share Less Than 1 Rating From Actual \\
+Model/Baseline & Accuracy & Weighted Average Precision & Weighted Average Recall & F1 Score & Share 1 Rating Or Less From Actual \\
 \midrule
-Rating Model 1 & 0.360000 & 0.30 & 0.36 & 0.260000 & 0.820000 \\
-Rating Model 2 & 0.510000 & 0.49 & 0.51 & 0.460000 & 0.890000 \\
-Rating Model 3 & 0.950000 & 0.95 & 0.95 & 0.950000 & 0.990000 \\
-Rating Model 4 & 0.950000 & 0.95 & 0.95 & 0.950000 & 0.990000 \\
-Majority Baseline & 0.320000 &  &  &  &  \\
+Rating Model 1 & 0.36 & 0.30 & 0.36 & 0.26 & 0.82 \\
+Rating Model 2 & 0.51 & 0.49 & 0.51 & 0.46 & 0.89 \\
+Rating Model 3 & 0.95 & 0.95 & 0.95 & 0.95 & 0.99 \\
+Rating Model 4 & 0.95 & 0.95 & 0.95 & 0.95 & 0.99 \\
+Majority Baseline & 0.32 &  &  &  &  \\
 \bottomrule
 \end{tabular}
 
