--- a/Code/Modelling/Logistic Regression/Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/Logistic Regression/Table Creation/Create Tables.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "0                                                                      "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
        "0              0.96  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
     "for col in ['Accuracy', 'F1 Score', 'Majority Baseline']:\n",
     "    changes_table[col] = changes_table[col].apply(lambda x: '{:,.2f}'.format(x))\n",
     "# Center all columns\n",
-    "lt_string = changes_table.to_latex(index=False, column_format='c{5cm}|c{5cm}|c{5cm}|c{5cm}|c{5cm}', escape=False)\n",
+    "lt_string = changes_table.to_latex(index=False, column_format='x{5cm}|x{5cm}|x{5cm}|x{5cm}|x{5cm}', escape=False)\n",
     "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
     "with open('../../../../Output/Modelling/Logistic Regression/Tables/changes_table.tex', 'w') as f:\n",
     "    f.write(latex_with_font_size)\n",
