--- a/Output/Modelling/Logistic Regression/Tables/changes_table.tex
+++ b/Output/Modelling/Logistic Regression/Tables/changes_table.tex
@@ -1,5 +1,5 @@
 \small
-\begin{tabular}{c{5cm}|c{5cm}|c{5cm}|c{5cm}|c{5cm}}
+\begin{tabular}{x{5cm}|x{5cm}|x{5cm}|x{5cm}|x{5cm}}
 \toprule
 Accuracy & Weighted Average Precision & Weighted Average Recall & F1 Score & Majority Baseline \\
 \midrule
