--- a/Code/Modelling/Logistic Regression/Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/Logistic Regression/Table Creation/Create Tables.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "0                                                                      "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
     "for col in model_comparison_df.columns:\n",
     "    model_comparison_df[col] = model_comparison_df[col].apply(lambda x: f'{x:.2f}' if isinstance(x, float) else x)\n",
     "# Center all columns\n",
-    "lt_string = model_comparison_df.to_latex(index=False, column_format='c' * len(model_comparison_df.columns), escape=False)\n",
+    "lt_string = model_comparison_df.to_latex(index=False, column_format='x{0.75cm}|x{0.75cm}|x{0.75cm}|x{0.75cm}|x{0.75cm}|x{0.75cm}', escape=False)\n",
     "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
     "with open('../../../../Output/Modelling/Logistic Regression/Tables/model_comparison_df.tex', 'w') as f:\n",
     "    f.write(latex_with_font_size)\n",
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
     "for col in classification_report_data.columns:\n",
     "    classification_report_data[col] = classification_report_data[col].apply(lambda x: f'{x:.2f}' if isinstance(x, float) else x)\n",
     "# Center all columns\n",
-    "lt_string = classification_report_data.to_latex(index=False, column_format='c' * 5, escape=False)\n",
+    "lt_string = classification_report_data.to_latex(index=False, column_format='x{0.75cm}|x{0.75cm}|x{0.75cm}|x{0.75cm}|x{0.75cm}', escape=False)\n",
     "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
     "with open('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Classification_Report.tex', 'w') as f:\n",
     "    f.write(latex_with_font_size)"
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
     "for col in ['C', 'L1 Ratio']:\n",
     "    best_params[col] = best_params[col].apply(lambda x: '{:,.2f}'.format(x))\n",
     "# Center all columns\n",
-    "lt_string = best_params.to_latex(index=False, column_format='c' * len(best_params.columns), escape=False)\n",
+    "lt_string = best_params.to_latex(index=False, column_format='x{0.75cm}|x{0.75cm}|x{0.75cm}|x{0.75cm}|x{0.75cm}|x{0.75cm}', escape=False)\n",
     "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
     "with open('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Best_Params.tex', 'w') as f:\n",
     "    f.write(latex_with_font_size)"
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
        "0              0.96  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
     "for col in ['Accuracy', 'F1 Score', 'Majority Baseline']:\n",
     "    changes_table[col] = changes_table[col].apply(lambda x: '{:,.2f}'.format(x))\n",
     "# Center all columns\n",
-    "lt_string = changes_table.to_latex(index=False, column_format='x{5cm}|x{5cm}|x{5cm}|x{5cm}|x{5cm}', escape=False)\n",
+    "lt_string = changes_table.to_latex(index=False, column_format='x{0.75cm}|x{0.75cm}|x{0.75cm}|x{0.75cm}|x{0.75cm}', escape=False)\n",
     "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
     "with open('../../../../Output/Modelling/Logistic Regression/Tables/changes_table.tex', 'w') as f:\n",
     "    f.write(latex_with_font_size)\n",
