--- a/Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Best_Params.tex
+++ b/Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Best_Params.tex
@@ -1,5 +1,5 @@
 \small
-\begin{tabular}{cccccc}
+\begin{tabular}{x{0.75cm}|x{0.75cm}|x{0.75cm}|x{0.75cm}|x{0.75cm}|x{0.75cm}}
 \toprule
 C & Class Weighting Strategy & L1 Ratio & Multi-Class Strategy & Penalty & Solver \\
 \midrule
