--- a/Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Classification_Report.tex
+++ b/Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Classification_Report.tex
@@ -1,5 +1,5 @@
 \small
-\begin{tabular}{x{0.75cm}|x{0.75cm}|x{0.75cm}|x{0.75cm}|x{0.75cm}}
+\begin{tabular}{ccccc}
 \toprule
 Rating & Precision & Recall & F1-Score & Support \\
 \midrule
