--- a/Output/Modelling/Logistic Regression/Tables/changes_table.tex
+++ b/Output/Modelling/Logistic Regression/Tables/changes_table.tex
@@ -1,5 +1,5 @@
 \small
-\begin{tabular}{x{0.75cm}|x{0.75cm}|x{0.75cm}|x{0.75cm}|x{0.75cm}}
+\begin{tabular}{ccccc}
 \toprule
 Accuracy & Weighted Average Precision & Weighted Average Recall & F1 Score & Majority Baseline \\
 \midrule
