--- a/Output/Modelling/Logistic Regression/Tables/model_comparison_df.tex
+++ b/Output/Modelling/Logistic Regression/Tables/model_comparison_df.tex
@@ -1,5 +1,5 @@
 \small
-\begin{tabular}{x{0.75cm}|x{0.75cm}|x{0.75cm}|x{0.75cm}|x{0.75cm}|x{0.75cm}}
+\begin{tabular}{cccccc}
 \toprule
 Model/Baseline & Accuracy & Weighted Average Precision & Weighted Average Recall & F1 Score & Share 1 Rating Or Less From Actual \\
 \midrule
