need feat names

--- a/Code/Modelling/Logistic Regression/Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/Logistic Regression/Table Creation/Create Tables.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "0                                                                      "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -404,12 +404,141 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Permutation Importance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>rating_on_previous_fixed_quarter_date</td>\n",
+       "      <td>0.280213</td>\n",
+       "      <td>0.010216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125</th>\n",
+       "      <td>rating_on_previous_fixed_quarter_date</td>\n",
+       "      <td>0.228926</td>\n",
+       "      <td>0.007956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>rating_on_previous_fixed_quarter_date</td>\n",
+       "      <td>0.105768</td>\n",
+       "      <td>0.003478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124</th>\n",
+       "      <td>rating_on_previous_fixed_quarter_date</td>\n",
+       "      <td>0.081100</td>\n",
+       "      <td>0.005875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>rating_on_previous_fixed_quarter_date</td>\n",
+       "      <td>0.014197</td>\n",
+       "      <td>0.001485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>129</th>\n",
+       "      <td>rating_on_previous_fixed_quarter_date</td>\n",
+       "      <td>0.012955</td>\n",
+       "      <td>0.001204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>dividendsPaid</td>\n",
+       "      <td>0.000887</td>\n",
+       "      <td>0.000561</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>totalStockholdersEquity</td>\n",
+       "      <td>0.000887</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>num_transparency</td>\n",
+       "      <td>0.000887</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>gf_score</td>\n",
+       "      <td>0.000887</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   feature      mean       std\n",
+       "126  rating_on_previous_fixed_quarter_date  0.280213  0.010216\n",
+       "125  rating_on_previous_fixed_quarter_date  0.228926  0.007956\n",
+       "121  rating_on_previous_fixed_quarter_date  0.105768  0.003478\n",
+       "124  rating_on_previous_fixed_quarter_date  0.081100  0.005875\n",
+       "122  rating_on_previous_fixed_quarter_date  0.014197  0.001485\n",
+       "129  rating_on_previous_fixed_quarter_date  0.012955  0.001204\n",
+       "64                           dividendsPaid  0.000887  0.000561\n",
+       "36                 totalStockholdersEquity  0.000887  0.000000\n",
+       "107                       num_transparency  0.000887  0.000000\n",
+       "108                               gf_score  0.000887  0.000000"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load '../../../../Output/Modelling/Logistic Regression/rating_model_4/rating_model_4_permutation_importance.parquet'\n",
+    "permutation_importance = pd.read_parquet('../../../../Output/Modelling/Logistic Regression/rating_model_4/rating_model_4_permutation_importance.parquet')\n",
+    "permutation_importance = permutation_importance.sort_values('mean',ascending=False)\n",
+    "permutation_importance.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Changes Table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +603,7 @@
        "0              0.96  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
