--- a/Code/Modelling/Logistic Regression/Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/Logistic Regression/Table Creation/Create Tables.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "[160 rows x 5 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "      <th>Weighted Average Precision</th>\n",
        "      <th>Weighted Average Recall</th>\n",
        "      <th>F1 Score</th>\n",
-       "      <th>Share 1 Rating Or Less From Actual</th>\n",
+       "      <th>Share $\\le$ 1 Rating From Actual</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -391,15 +391,15 @@
        "0     Rating Model 4     0.95                       0.95   \n",
        "0  Majority Baseline     0.32                              \n",
        "\n",
-       "  Weighted Average Recall F1 Score Share 1 Rating Or Less From Actual  \n",
-       "0                    0.36     0.26                               0.82  \n",
-       "0                    0.51     0.46                               0.89  \n",
-       "0                    0.95     0.95                               0.99  \n",
-       "0                    0.95     0.95                               0.99  \n",
-       "0                                                                      "
+       "  Weighted Average Recall F1 Score Share $\\le$ 1 Rating From Actual  \n",
+       "0                    0.36     0.26                             0.82  \n",
+       "0                    0.51     0.46                             0.89  \n",
+       "0                    0.95     0.95                             0.99  \n",
+       "0                    0.95     0.95                             0.99  \n",
+       "0                                                                    "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,6 +438,8 @@
     "# Format columns\n",
     "for col in model_comparison_df.columns:\n",
     "    model_comparison_df[col] = model_comparison_df[col].apply(lambda x: f'{x:.2f}' if isinstance(x, float) else x)\n",
+    "# Rename 'Share 1 Rating Or Less From Actual' to 'Share $le$ Rating From Actual'\n",
+    "model_comparison_df.rename(columns={'Share 1 Rating Or Less From Actual': 'Share $\\\\le$ 1 Rating From Actual'}, inplace=True)\n",
     "# Center all columns\n",
     "lt_string = model_comparison_df.to_latex(index=False, column_format='c' * len(model_comparison_df.columns), escape=False)\n",
     "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
@@ -456,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +742,7 @@
        "14                       Numeric Transparency  0.000543            0.000469"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +868,7 @@
        "0              0.96  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
