--- a/Output/Modelling/Logistic Regression/Tables/model_comparison_df.tex
+++ b/Output/Modelling/Logistic Regression/Tables/model_comparison_df.tex
@@ -1,7 +1,7 @@
 \small
 \begin{tabular}{cccccc}
 \toprule
-Model/Baseline & Accuracy & Weighted Average Precision & Weighted Average Recall & F1 Score & Share 1 Rating Or Less From Actual \\
+Model/Baseline & Accuracy & Weighted Average Precision & Weighted Average Recall & F1 Score & Share $\le$ 1 Rating From Actual \\
 \midrule
 Rating Model 1 & 0.36 & 0.30 & 0.36 & 0.26 & 0.82 \\
 Rating Model 2 & 0.51 & 0.49 & 0.51 & 0.46 & 0.89 \\
