--- a/Code/Modelling/Autogluon/Tabular Only SCF with NLP Features - Medium Presets/Produce_LaTeX_Autogluon_Tabular_Only_SCF_Medium_Presets.ipynb
+++ b/Code/Modelling/Autogluon/Tabular Only SCF with NLP Features - Medium Presets/Produce_LaTeX_Autogluon_Tabular_Only_SCF_Medium_Presets.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "13          1  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        "13      KNeighborsUnif       0.848270"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
     "    lt_lb[col] = lt_lb[col].apply(lambda x: '{:,.2f}'.format(x))\n",
     "# Export to LaTeX\n",
     "lt_string = lt_lb.to_latex(index=False, column_format='c' * 2, escape=False)\n",
-    "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
     "with open('../../../../Output/Modelling/Autogluon/Autogluon_Tabular_Only_SCF_Medium_Presets_leaderboard.tex', 'w') as f:\n",
     "    f.write(latex_with_font_size)\n"
    ]
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
        "[121 rows x 7 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
        "9            0.000000  5.000000e-01  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
