--- a/Code/Modelling/Logistic Regression/Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/Logistic Regression/Table Creation/Create Tables.ipynb
@@ -442,7 +442,7 @@
     "model_comparison_df.rename(columns={'Share 1 Rating Or Less From Actual': 'Share $\\\\le$ 1 Rating From Actual'}, inplace=True)\n",
     "# Center all columns\n",
     "lt_string = model_comparison_df.to_latex(index=False, column_format='c' * len(model_comparison_df.columns), escape=False)\n",
-    "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
     "with open('../../../../Output/Modelling/Logistic Regression/Tables/model_comparison_df.tex', 'w') as f:\n",
     "    f.write(latex_with_font_size)\n",
     "\n",
@@ -525,7 +525,7 @@
     "    classification_report_data[col] = classification_report_data[col].apply(lambda x: f'{x:.2f}' if isinstance(x, float) else x)\n",
     "# Center all columns\n",
     "lt_string = classification_report_data.to_latex(index=False, column_format='c' * 5, escape=False)\n",
-    "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
     "with open('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Classification_Report.tex', 'w') as f:\n",
     "    f.write(latex_with_font_size)"
    ]
@@ -585,7 +585,7 @@
     "    best_params[col] = best_params[col].apply(lambda x: '{:,.2f}'.format(x))\n",
     "# Center all columns\n",
     "lt_string = best_params.to_latex(index=False, column_format='c' * len(best_params.columns), escape=False)\n",
-    "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
     "with open('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Best_Params.tex', 'w') as f:\n",
     "    f.write(latex_with_font_size)"
    ]
@@ -787,7 +787,7 @@
     "# Export to LaTeX\n",
     "# Center all columns\n",
     "lt_string = pi_top_15.to_latex(index=False, column_format='c' * len(pi_top_15.columns), escape=False)\n",
-    "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
     "with open('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Permutation_Importance_Top_15.tex', 'w') as f:\n",
     "    f.write(latex_with_font_size)\n",
     "\n",
@@ -895,7 +895,7 @@
     "    changes_table[col] = changes_table[col].apply(lambda x: '{:,.2f}'.format(x))\n",
     "# Center all columns\n",
     "lt_string = changes_table.to_latex(index=False, column_format='c' * len(changes_table.columns), escape=False)\n",
-    "latex_with_font_size = \"\\\\small\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
     "with open('../../../../Output/Modelling/Logistic Regression/Tables/changes_table.tex', 'w') as f:\n",
     "    f.write(latex_with_font_size)\n",
     "\n",
