--- a/Output/Modelling/Logistic Regression/Tables/changes_table.tex
+++ b/Output/Modelling/Logistic Regression/Tables/changes_table.tex
@@ -1,4 +1,4 @@
-\small
+\footnotesize
 \begin{tabular}{ccccc}
 \toprule
 Accuracy & Weighted Average Precision & Weighted Average Recall & F1 Score & Majority Baseline \\
