--- a/Output/Modelling/Logistic Regression/Tables/model_comparison_df.tex
+++ b/Output/Modelling/Logistic Regression/Tables/model_comparison_df.tex
@@ -1,4 +1,4 @@
-\small
+\footnotesize
 \begin{tabular}{cccccc}
 \toprule
 Model/Baseline & Accuracy & Weighted Average Precision & Weighted Average Recall & F1 Score & Share $\le$ 1 Rating From Actual \\
