--- a/Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Best_Params.tex
+++ b/Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Best_Params.tex
@@ -1,4 +1,4 @@
-\small
+\footnotesize
 \begin{tabular}{cccccc}
 \toprule
 C & Class Weighting Strategy & L1 Ratio & Multi-Class Strategy & Penalty & Solver \\
