no ag table rounding

--- a/Code/Modelling/Autogluon/Tabular Only SCF with NLP Features - Medium Presets/Produce_LaTeX_Autogluon_Tabular_Only_SCF_Medium_Presets.ipynb
+++ b/Code/Modelling/Autogluon/Tabular Only SCF with NLP Features - Medium Presets/Produce_LaTeX_Autogluon_Tabular_Only_SCF_Medium_Presets.ipynb
@@ -518,8 +518,8 @@
     "# Center all columns\n",
     "# Two decimal places for all variables and commas for thousands\n",
     "# Format numbers by converting to formatted strings\n",
-    "for col in ['Test Accuracy']:\n",
-    "    lt_lb[col] = lt_lb[col].apply(lambda x: '{:,.2f}'.format(x))\n",
+    "# for col in ['Test Accuracy']:\n",
+    "#     lt_lb[col] = lt_lb[col].apply(lambda x: '{:,.2f}'.format(x))\n",
     "# Export to LaTeX\n",
     "lt_string = lt_lb.to_latex(index=False, column_format='c' * 2, escape=False)\n",
     "latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
